--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    
+    <div class="container">
     <nav class='navbar navbar-expand-lg navbar-light' style="padding: 0; padding-top: 5px;">
         <div class='container-fluid'>
             <a class="navbar-brand" href="index.html" style="padding: 0; margin: 0;">
@@ -43,6 +43,7 @@
         </div>
     </nav>
     
+        </div>
     <div class="container">
         <div class="row">
 
